@@ -747,6 +747,16 @@ class TestAtomGroupNoTop(TestCase):
         ag._rebuild_caches()
         assert_equal('atoms' in ag._AtomGroup__cache, True)
 
+    def test_dimensions(self):
+        assert_raises(AttributeError, getattr, self.u.atoms[:10], "dimensions")
+
+    def test_set_dimensions(self):
+        u = MDAnalysis.Universe(PSF, DCD)
+        box = numpy.array([10, 11, 12, 90, 90, 90])
+        u.atoms.dimensions = numpy.array([10, 11, 12, 90, 90, 90])
+        assert_allclose(u.dimensions, box)
+        assert_allclose(u.atoms.dimensions, box)
+
 
 class TestUniverseSetTopology(TestCase):
     """Tests setting of bonds/angles/torsions/impropers from Universe."""
@@ -1293,6 +1303,12 @@ class TestUniverse(TestCase):
         import cPickle
         u = MDAnalysis.Universe(PSF, DCD)
         assert_raises(NotImplementedError, cPickle.dumps, u, protocol=cPickle.HIGHEST_PROTOCOL)
+
+    def test_set_dimensions(self):
+        u = MDAnalysis.Universe(PSF, DCD)
+        box = numpy.array([10, 11, 12, 90, 90, 90])
+        u.dimensions = numpy.array([10, 11, 12, 90, 90, 90])
+        assert_allclose(u.dimensions, box)
 
 class TestPBCFlag(TestCase):
     def setUp(self):
